--- a/Scanner des Vulnerabilites/test liaison/scan.html
+++ b/Scanner des Vulnerabilites/test liaison/scan.html
@@ -3,24 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vulnerability Scanner</title>
+  <title>ThreatXplore</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
 </head>
 <body>
   <header>
     <nav class="navbar">
-      <a class="logo" href="#">Vulnerability Scanner<span>.</span></a>
+      <a class="logo" href="#">ThreatXplore<span>.</span></a>
       <ul class="menu-links">
-        <span id="close-menu-btn" class="material-symbols-outlined">close</span>
         <li><a href="home.html">Home</a></li>
         <li><a href="about_us.html">About us</a></li>
-        <li><a href="attacks.html">Attacks & Menace</a></li>
-        <li><a href="scan.html">GogoScan</a></li>
+        <li><a href="attacks.html">Vulnerabilities</a></li>
+        <li><a href="scan.html">Scan</a></li>
         <li><a href="result.html">Result Scan</a></li>
         <li><a href="download.html">Download</a></li>
       </ul>
-      <span id="hamburger-btn" class="material-symbols-outlined">menu</span>
     </nav>
   </header>
 
@@ -49,8 +47,15 @@
     </div>
   </section>
 
+  <section id="findings-section" class="findings-section hidden">
+    <div class="findings-content">
+      <h2>Findings</h2>
+      <div id="findings-result"></div>
+    </div>
+  </section>
+
   <footer>
-    <p>&copy; 2024 Vulnerability Scanner. All rights reserved.</p>
+    <p>&copy; 2024 ThreatXplore. All rights reserved.</p>
   </footer>
 
   <script src="scan.js"></script>
