test liaison pour os command marche

--- a/Scanner des Vulnerabilites/test liaison/scan.html
+++ b/Scanner des Vulnerabilites/test liaison/scan.html
@@ -32,6 +32,7 @@
           <label><input type="radio" name="scan-type" value="whois" checked> WHOIS</label>
           <label><input type="radio" name="scan-type" value="sqli"> SQL Injection</label>
           <label><input type="radio" name="scan-type" value="xss"> XSS</label>
+          <label><input type="radio" name="scan-type" value="os_command_injection"> OS command injection</label>
           <label><input type="radio" name="scan-type" value="all"> All</label>
         </div>
         <button type="submit">Scan</button>
