--- a/Scanner des Vulnerabilites/test liaison/scan.html
+++ b/Scanner des Vulnerabilites/test liaison/scan.html
@@ -33,6 +33,7 @@
           <label><input type="radio" name="scan-type" value="sqli"> SQL Injection</label>
           <label><input type="radio" name="scan-type" value="xss"> XSS</label>
           <label><input type="radio" name="scan-type" value="os_command_injection"> OS command injection</label>
+          <label><input type="radio" name="scan-type" value="cors"> cors</label>
           <label><input type="radio" name="scan-type" value="ssti"> ssti</label>
           <label><input type="radio" name="scan-type" value="all"> All</label>
         </div>
