test liaison pour email et credit card marche

--- a/Scanner des Vulnerabilites/test liaison/scan.html
+++ b/Scanner des Vulnerabilites/test liaison/scan.html
@@ -35,6 +35,8 @@
           <label><input type="radio" name="scan-type" value="os_command_injection"> OS command injection</label>
           <label><input type="radio" name="scan-type" value="cors"> cors</label>
           <label><input type="radio" name="scan-type" value="ssti"> ssti</label>
+          <label><input type="radio" name="scan-type" value="email"> email</label>
+          <label><input type="radio" name="scan-type" value="credit card"> credit card</label>
           <label><input type="radio" name="scan-type" value="all"> All</label>
         </div>
         <button type="submit">Scan</button>
