xxe working reste a ajouter whois

--- a/Scanner des Vulnerabilites/test liaison/scan.html
+++ b/Scanner des Vulnerabilites/test liaison/scan.html
@@ -30,13 +30,14 @@
         <input type="text" id="url-input" placeholder="Enter URL" required>
         <div class="scan-type-selection">
           <label><input type="radio" name="scan-type" value="whois" checked> WHOIS</label>
-          <label><input type="radio" name="scan-type" value="sqli"> SQL Injection</label>
+          <label><input type="radio" name="scan-type" value="sqli"> SQLi</label>
           <label><input type="radio" name="scan-type" value="xss"> XSS</label>
           <label><input type="radio" name="scan-type" value="os_command_injection"> OS command injection</label>
-          <label><input type="radio" name="scan-type" value="cors"> cors</label>
-          <label><input type="radio" name="scan-type" value="ssti"> ssti</label>
+          <label><input type="radio" name="scan-type" value="cors"> CORS</label>
+          <label><input type="radio" name="scan-type" value="ssti"> SSTI</label>
           <label><input type="radio" name="scan-type" value="email"> email</label>
           <label><input type="radio" name="scan-type" value="credit card"> credit card</label>
+          <label><input type="radio" name="scan-type" value="xxe"> XXE</label>
           <label><input type="radio" name="scan-type" value="all"> All</label>
         </div>
         <button type="submit">Scan</button>
