--- a/Scanner des Vulnerabilites/test liaison/scan.html
+++ b/Scanner des Vulnerabilites/test liaison/scan.html
@@ -38,6 +38,7 @@
           <label><input type="radio" name="scan-type" value="email"> email</label>
           <label><input type="radio" name="scan-type" value="credit card"> credit card</label>
           <label><input type="radio" name="scan-type" value="xxe"> XXE</label>
+          <label><input type="radio" name="scan-type" value="ssrf"> SSRF</label>
           <label><input type="radio" name="scan-type" value="all"> All</label>
         </div>
         <button type="submit">Scan</button>
