test pour http fonctionnel

--- a/Scanner des Vulnerabilites/test liaison/scan.html
+++ b/Scanner des Vulnerabilites/test liaison/scan.html
@@ -40,6 +40,9 @@
           <label><input type="radio" name="scan-type" value="xxe"> XXE</label>
           <label><input type="radio" name="scan-type" value="ssrf"> SSRF</label>
           <label><input type="radio" name="scan-type" value="csrf"> CSRF</label>
+          <label><input type="radio" name="scan-type" value="http_methods"> HTTP methods</label>
+          <label><input type="radio" name="scan-type" value="redirections"> HTTP redirections</label>
+          <label><input type="radio" name="scan-type" value="security_headers"> HTTP headers</label>
           <label><input type="radio" name="scan-type" value="all"> All</label>
         </div>
         <button type="submit">Scan</button>
