test liason pour detcte robot.txt fonctionnel

--- a/Scanner des Vulnerabilites/test liaison/scan.html
+++ b/Scanner des Vulnerabilites/test liaison/scan.html
@@ -43,6 +43,7 @@
           <label><input type="radio" name="scan-type" value="http_methods"> HTTP methods</label>
           <label><input type="radio" name="scan-type" value="redirections"> HTTP redirections</label>
           <label><input type="radio" name="scan-type" value="security_headers"> HTTP headers</label>
+          <label><input type="radio" name="scan-type" value="robot"> Robots.txt available </label>
           <label><input type="radio" name="scan-type" value="all"> All</label>
         </div>
         <button type="submit">Scan</button>
