ajout du lfi fonctionne les tests

--- a/Scanner des Vulnerabilites/test liaison/scan.html
+++ b/Scanner des Vulnerabilites/test liaison/scan.html
@@ -44,7 +44,7 @@
           <label><input type="radio" name="scan-type" value="redirections"> HTTP redirections</label>
           <label><input type="radio" name="scan-type" value="security_headers"> HTTP headers</label>
           <label><input type="radio" name="scan-type" value="robot"> Robots.txt available </label>
-          <label><input type="radio" name="scan-type" value="buffer_overflow"> Buffer Overflow </label>
+          <label><input type="radio" name="scan-type" value="lfi"> Local File Inclusion </label>
           <label><input type="radio" name="scan-type" value="all"> All</label>
         </div>
         <button type="submit">Scan</button>
