path trasversal vuln realise et teste sur le website

--- a/Scanner des Vulnerabilites/test liaison/scan.html
+++ b/Scanner des Vulnerabilites/test liaison/scan.html
@@ -46,6 +46,7 @@
           <label><input type="radio" name="scan-type" value="robot"> Robots.txt available </label>
           <label><input type="radio" name="scan-type" value="lfi"> Local File Inclusion </label>
           <label><input type="radio" name="scan-type" value="file_upload"> Unrestricted file upload </label>
+          <label><input type="radio" name="scan-type" value="path_trasversal"> Path Trasversal </label>
           <label><input type="radio" name="scan-type" value="all"> All</label>
         </div>
         <button type="submit">Scan</button>
