test pour weak authentication ok, reste a regler brut force

--- a/Scanner des Vulnerabilites/test liaison/scan.html
+++ b/Scanner des Vulnerabilites/test liaison/scan.html
@@ -47,6 +47,9 @@
           <label><input type="radio" name="scan-type" value="lfi"> Local File Inclusion </label>
           <label><input type="radio" name="scan-type" value="file_upload"> Unrestricted file upload </label>
           <label><input type="radio" name="scan-type" value="path_trasversal"> Path Trasversal </label>
+          <label><input type="radio" name="scan-type" value="common_passwords"> Common passwords</label>
+          <label><input type="radio" name="scan-type" value="brut_force"> Brut Force</label>
+          <label><input type="radio" name="scan-type" value="account_lockout"> Account Lockout</label>
           <label><input type="radio" name="scan-type" value="all"> All</label>
         </div>
         <button type="submit">Scan</button>
