test pour websocket sur website fonctionnel

--- a/Scanner des Vulnerabilites/test liaison/scan.html
+++ b/Scanner des Vulnerabilites/test liaison/scan.html
@@ -50,6 +50,9 @@
           <label><input type="radio" name="scan-type" value="common_passwords"> Common passwords</label>
           <label><input type="radio" name="scan-type" value="brut_force"> Brut Force</label>
           <label><input type="radio" name="scan-type" value="account_lockout"> Account Lockout</label>
+          <label><input type="radio" name="scan-type" value="scan_ports"> Scan open ports</label>
+          <label><input type="radio" name="scan-type" value="crawl"> Crawl</label>
+          <label><input type="radio" name="scan-type" value="websocket"> WebSocket Manipulation</label>
           <label><input type="radio" name="scan-type" value="all"> All</label>
         </div>
         <button type="submit">Scan</button>
