testes fonctionnels pour tous les vulns

--- a/Scanner des Vulnerabilites/test liaison/scan.html
+++ b/Scanner des Vulnerabilites/test liaison/scan.html
@@ -53,6 +53,9 @@
           <label><input type="radio" name="scan-type" value="scan_ports"> Scan open ports</label>
           <label><input type="radio" name="scan-type" value="crawl"> Crawl</label>
           <label><input type="radio" name="scan-type" value="websocket"> WebSocket Manipulation</label>
+          <label><input type="radio" name="scan-type" value="scan_gen"> General Information Scan</label>
+          <label><input type="radio" name="scan-type" value="certificate_issues"> Certificate issues</label>
+          <label><input type="radio" name="scan-type" value="tls_ssl"> SSL/TLS vulnerabilities</label>
           <label><input type="radio" name="scan-type" value="all"> All</label>
         </div>
         <button type="submit">Scan</button>
