--- a/Scanner des Vulnerabilites/test liaison/scan.html
+++ b/Scanner des Vulnerabilites/test liaison/scan.html
@@ -29,34 +29,34 @@
       <form id="scan-form" class="scan-form">
         <input type="text" id="url-input" placeholder="Enter URL" required>
         <div class="scan-type-selection">
-          <label><input type="radio" name="scan-type" value="whois" checked> WHOIS</label>
-          <label><input type="radio" name="scan-type" value="sqli"> SQLi</label>
-          <label><input type="radio" name="scan-type" value="xss"> XSS</label>
-          <label><input type="radio" name="scan-type" value="os_command_injection"> OS command injection</label>
-          <label><input type="radio" name="scan-type" value="cors"> CORS</label>
-          <label><input type="radio" name="scan-type" value="ssti"> SSTI</label>
-          <label><input type="radio" name="scan-type" value="email"> email</label>
-          <label><input type="radio" name="scan-type" value="credit card"> credit card</label>
-          <label><input type="radio" name="scan-type" value="xxe"> XXE</label>
-          <label><input type="radio" name="scan-type" value="ssrf"> SSRF</label>
-          <label><input type="radio" name="scan-type" value="csrf"> CSRF</label>
-          <label><input type="radio" name="scan-type" value="http_methods"> HTTP methods</label>
-          <label><input type="radio" name="scan-type" value="redirections"> HTTP redirections</label>
-          <label><input type="radio" name="scan-type" value="security_headers"> HTTP headers</label>
-          <label><input type="radio" name="scan-type" value="robot"> Robots.txt available </label>
-          <label><input type="radio" name="scan-type" value="lfi"> Local File Inclusion </label>
-          <label><input type="radio" name="scan-type" value="file_upload"> Unrestricted file upload </label>
-          <label><input type="radio" name="scan-type" value="path_trasversal"> Path Trasversal </label>
-          <label><input type="radio" name="scan-type" value="common_passwords"> Common passwords</label>
-          <label><input type="radio" name="scan-type" value="brut_force"> Brut Force</label>
-          <label><input type="radio" name="scan-type" value="account_lockout"> Account Lockout</label>
-          <label><input type="radio" name="scan-type" value="scan_ports"> Scan open ports</label>
-          <label><input type="radio" name="scan-type" value="crawl"> Crawl</label>
-          <label><input type="radio" name="scan-type" value="websocket"> WebSocket Manipulation</label>
-          <label><input type="radio" name="scan-type" value="scan_gen"> General Information Scan</label>
-          <label><input type="radio" name="scan-type" value="certificate_issues"> Certificate issues</label>
-          <label><input type="radio" name="scan-type" value="tls_ssl"> SSL/TLS vulnerabilities</label>
-          <label><input type="radio" name="scan-type" value="all"> All</label>
+          <label><input type="checkbox" name="scan-type" value="whois" checked> WHOIS</label>
+          <label><input type="checkbox" name="scan-type" value="sqli"> SQLi</label>
+          <label><input type="checkbox" name="scan-type" value="xss"> XSS</label>
+          <label><input type="checkbox" name="scan-type" value="os_command_injection"> OS command injection</label>
+          <label><input type="checkbox" name="scan-type" value="cors"> CORS</label>
+          <label><input type="checkbox" name="scan-type" value="ssti"> SSTI</label>
+          <label><input type="checkbox" name="scan-type" value="email"> email</label>
+          <label><input type="checkbox" name="scan-type" value="credit card"> credit card</label>
+          <label><input type="checkbox" name="scan-type" value="xxe"> XXE</label>
+          <label><input type="checkbox" name="scan-type" value="ssrf"> SSRF</label>
+          <label><input type="checkbox" name="scan-type" value="csrf"> CSRF</label>
+          <label><input type="checkbox" name="scan-type" value="http_methods"> HTTP methods</label>
+          <label><input type="checkbox" name="scan-type" value="redirections"> HTTP redirections</label>
+          <label><input type="checkbox" name="scan-type" value="security_headers"> HTTP headers</label>
+          <label><input type="checkbox" name="scan-type" value="robot"> Robots.txt available </label>
+          <label><input type="checkbox" name="scan-type" value="lfi"> Local File Inclusion </label>
+          <label><input type="checkbox" name="scan-type" value="file_upload"> Unrestricted file upload </label>
+          <label><input type="checkbox" name="scan-type" value="path_trasversal"> Path Trasversal </label>
+          <label><input type="checkbox" name="scan-type" value="common_passwords"> Common passwords</label>
+          <label><input type="checkbox" name="scan-type" value="brut_force"> Brut Force</label>
+          <label><input type="checkbox" name="scan-type" value="account_lockout"> Account Lockout</label>
+          <label><input type="checkbox" name="scan-type" value="scan_ports"> Scan open ports</label>
+          <label><input type="checkbox" name="scan-type" value="crawl"> Crawl</label>
+          <label><input type="checkbox" name="scan-type" value="websocket"> WebSocket Manipulation</label>
+          <label><input type="checkbox" name="scan-type" value="scan_gen"> General Information Scan</label>
+          <label><input type="checkbox" name="scan-type" value="certificate_issues"> Certificate issues</label>
+          <label><input type="checkbox" name="scan-type" value="tls_ssl"> SSL/TLS vulnerabilities</label>
+          <label><input type="checkbox" name="scan-type" value="all"> All</label>
         </div>
         <button type="submit">Scan</button>
       </form>
