--- a/Scanner des Vulnerabilites/test liaison/scan.html
+++ b/Scanner des Vulnerabilites/test liaison/scan.html
@@ -35,18 +35,18 @@
           <label><input type="checkbox" name="scan-type" value="os_command_injection"> OS command injection</label>
           <label><input type="checkbox" name="scan-type" value="cors"> CORS</label>
           <label><input type="checkbox" name="scan-type" value="ssti"> SSTI</label>
-          <label><input type="checkbox" name="scan-type" value="email"> email</label>
-          <label><input type="checkbox" name="scan-type" value="credit card"> credit card</label>
+          <label><input type="checkbox" name="scan-type" value="email"> Email</label>
+          <label><input type="checkbox" name="scan-type" value="credit_card"> Credit card</label>
           <label><input type="checkbox" name="scan-type" value="xxe"> XXE</label>
           <label><input type="checkbox" name="scan-type" value="ssrf"> SSRF</label>
           <label><input type="checkbox" name="scan-type" value="csrf"> CSRF</label>
           <label><input type="checkbox" name="scan-type" value="http_methods"> HTTP methods</label>
           <label><input type="checkbox" name="scan-type" value="redirections"> HTTP redirections</label>
           <label><input type="checkbox" name="scan-type" value="security_headers"> HTTP headers</label>
-          <label><input type="checkbox" name="scan-type" value="robot"> Robots.txt available </label>
-          <label><input type="checkbox" name="scan-type" value="lfi"> Local File Inclusion </label>
-          <label><input type="checkbox" name="scan-type" value="file_upload"> Unrestricted file upload </label>
-          <label><input type="checkbox" name="scan-type" value="path_trasversal"> Path Trasversal </label>
+          <label><input type="checkbox" name="scan-type" value="robot"> Robots.txt available</label>
+          <label><input type="checkbox" name="scan-type" value="lfi"> Local File Inclusion</label>
+          <label><input type="checkbox" name="scan-type" value="file_upload"> Unrestricted file upload</label>
+          <label><input type="checkbox" name="scan-type" value="path_traversal"> Path Traversal</label>
           <label><input type="checkbox" name="scan-type" value="common_passwords"> Common passwords</label>
           <label><input type="checkbox" name="scan-type" value="brut_force"> Brut Force</label>
           <label><input type="checkbox" name="scan-type" value="account_lockout"> Account Lockout</label>
