correction css pour scan.hmtl

--- a/Scanner des Vulnerabilites/webSite_version/scan.html
+++ b/Scanner des Vulnerabilites/webSite_version/scan.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ThreatXplore</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style_scan.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
 </head>
 <body>
@@ -12,12 +12,11 @@
     <nav class="navbar">
       <a class="logo" href="#">ThreatXplore<span>.</span></a>
       <ul class="menu-links">
-        <li><a href="home.html">Home</a></li>
-        <li><a href="about_us.html">About us</a></li>
-        <li><a href="attacks.html">Vulnerabilities</a></li>
-        <li><a href="scan.html">Scan</a></li>
-        <li><a href="result.html">Result Scan</a></li>
-        <li><a href="download.html">Download</a></li>
+        <li><a href="home.html">HOME</a></li>
+        <li><a href="learnMore.html">LEARN MORE</a></li>
+        <li><a href="contactUs.html">CONTACT US</a></li>
+        <li><a href="scan.html">SCANNER</a></li>
+        <li><a href="download.html">DOWNLOAD</a></li>
       </ul>
     </nav>
   </header>
