website before revision

--- a/Scanner des Vulnerabilites/webSite_version/contactUs.html
+++ b/Scanner des Vulnerabilites/webSite_version/contactUs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vulnerability Scanner</title>
+    <title>ThreatXplore</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <section class="sub-header">
+    <section class="sub-header" id="contactUs">
         <nav>
-            <a href="home.html"><img src="images/logo-removebg-preview.png" alt=""></a>
+            <a href="home.html" class="logo">ThreatXplore<span>.</span></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
@@ -37,7 +37,7 @@
 
     <section class="aboutus">
         <h1>ABOUT US</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p>To contact us, you can go to our respective LinkedIn et GitHub.</p>
 
         <div class="row">
             <div class="aboutus_items">
@@ -62,7 +62,7 @@
 
     <!--Contact us-->
     <section class="contactUs">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde at dolor est, ullam rerum consectetur iusto saepe odit cum, quos nesciunt odio quasi quis error libero tenetur vel quidem placeat.</p>
+        <p>Or you can fill the formulary below.</p>
         <div class="row">
             <div class="contactUs-col">
                 <form action="form-handler.php" method="post">
@@ -80,7 +80,6 @@
     <!--FOOTER-->
     <section class="footer">
         <h5>About Us</h5>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus possimus cum saepe voluptates voluptatum illum nesciunt, porro magnam enim earum voluptatem architecto ad nobis necessitatibus esse aspernatur alias amet autem.</p>
         <div class="icons">
             <i class="fa fa-github"></i>
         </div>
