--- a/Scanner des Vulnerabilites/webSite_version/learnMore.html
+++ b/Scanner des Vulnerabilites/webSite_version/learnMore.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vulnerability Scanner</title>
+    <title>ThreatXplore</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="home.html"><img src="images/logo-removebg-preview.png" alt=""></a>
+            <a href="home.html" class="logo">ThreatXplore<span>.</span></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
