--- a/Scanner des Vulnerabilites/webSite_version/other_version/scan.html
+++ b/Scanner des Vulnerabilites/webSite_version/other_version/scan.html
@@ -29,7 +29,7 @@
       <form id="scan-form" class="scan-form">
         <input type="text" id="url-input" placeholder="Enter URL" required>
         <div class="scan-type-selection">
-          <label><input type="checkbox" name="scan-type" value="whois" checked> WHOIS</label>
+          <label><input type="checkbox" name="scan-type" value="whois"> WHOIS</label>
           <label><input type="checkbox" name="scan-type" value="sqli"> SQLi</label>
           <label><input type="checkbox" name="scan-type" value="xss"> XSS</label>
           <label><input type="checkbox" name="scan-type" value="os_command_injection"> OS command injection</label>
