--- a/Scanner des Vulnerabilites/webSite_version/home.html
+++ b/Scanner des Vulnerabilites/webSite_version/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vulnerability Scanner</title>
+    <title>ThreatXplore</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
 <body>
     <section class="header">
         <nav>
-            <a href="home.html"><img src="images/logo-removebg-preview.png" alt=""></a>
+            <a href="home.html" class="logo">ThreatXplore<span>.</span></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
@@ -36,22 +36,31 @@
 
 
     <!--ABOUT US-->
-    <section class="apropos">
+    <section class="apropos" id="apropos">
         <h1>APROPOS</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p>Welcome to our website <span class="oblique">ThreatXplore</span>. </p>
 
         <div class="row">
             <div class="apropos_items"> <!--course-col-->
                 <h3>Who Are We ?</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum officiis exercitationem tempore sint dolor magnam, dolorum deleniti voluptate cupiditate nostrum facilis, perspiciatis nihil totam placeat. Tempore aperiam temporibus minima rerum.</p>
+                <p>We are 3rd year student in Cybersecurity at ESGI (Ecole Supérieure de Génie Informatique) localised in Paris, 12rd arrondissment. This website has been created 
+                    as a annual final project.
+                </p>
             </div>
             <div class="apropos_items">
                 <h3>Purpose of this website</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum officiis exercitationem tempore sint dolor magnam, dolorum deleniti voluptate cupiditate nostrum facilis, perspiciatis nihil totam placeat. Tempore aperiam temporibus minima rerum.</p>
+                <p>This website is vulnerability scanner for web application. It's search to give a free solution to 
+                    verify the vulnerability risk that a web application can be expose and give solution to secure it in case of risk. </p>
             </div>
             <div class="apropos_items">
                 <h3>Get Started</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum officiis exercitationem tempore sint dolor magnam, dolorum deleniti voluptate cupiditate nostrum facilis, perspiciatis nihil totam placeat. Tempore aperiam temporibus minima rerum.</p>
+                <p>
+                    <p>To directly begin to scan your application, you can navigate to the <span class="oblique">SCANNER</span> section or directly click on the link below.
+                    <button type="submit" class="hero-btn red-btn">START</button></p>
+                    <p>To learn more about the scanner, you can go to the <span class="oblique">LEARN MORE</span> section or click in the 
+                    link below
+                    <button type="submit" class="hero-btn red-btn">LEARN</button></p>
+                </p>
             </div>
         </div>
     </section>
@@ -61,14 +70,13 @@
     <!--Call To Action -> Contact Us-->
     <section class="cta">
         <h1>Want To Know More ?</h1>
-        <a href="contactUs.html" class="hero-btn">CONTACT US</a>
+        <a href="contactUs.html" class="hero-btn" href="#contactUs">CONTACT US</a>
     </section>
 
         
     <!--FOOTER-->
     <section class="footer">
         <h5>About Us</h5>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus possimus cum saepe voluptates voluptatum illum nesciunt, porro magnam enim earum voluptatem architecto ad nobis necessitatibus esse aspernatur alias amet autem.</p>
         <div class="icons">
             <i class="fa fa-github"></i>
         </div>
