before last review

--- a/Scanner des Vulnerabilites/webSite_version/download.html
+++ b/Scanner des Vulnerabilites/webSite_version/download.html
@@ -32,11 +32,13 @@
     </section>
 
 
+    <section class="aboutus">
+        <h1>DOWNLOAD</h1>
+        <p>The scanner is also available in the form of a script and an application. Download eip of your choice.</p>
+
     
     <!--DOWNLOAD-->
     <section class="download">
-        <h1>DOWNLOAD</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
 
         <div class="row">
             <div class="container">
@@ -49,7 +51,7 @@
                     </div>
                     <div class="face face2">
                         <div class="content">
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo ipsum quam ad voluptatem optio repellendus soluta animi, ex expedita et, est fuga debitis eum ab nemo ipsam aliquid a facilis? </p>
+                            <p>Go to the github to learn how install and use the script </p>
                             <a href="zip/script.zip" download="script.zip" type="button">DOWNLOAD HERE</a>
                         </div>
                     </div>
@@ -64,7 +66,7 @@
                     </div>
                     <div class="face face2">
                         <div class="content">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam nemo magnam modi ipsum praesentium quae nihil qui sapiente autem atque maxime necessitatibus!</p>
+                            <p>Go to our GitHub to learn how to use the application version.</p>
                             <a href="zip/app.zip" download="app.zip" type="button">DOWNLOAD HERE</a>
                         </div>
                     </div>
