--- a/Scanner des Vulnerabilites/webSite_version/home.html
+++ b/Scanner des Vulnerabilites/webSite_version/home.html
@@ -56,10 +56,10 @@
                 <h3>Get Started</h3>
                 <p>
                     <p>To directly begin to scan your application, you can navigate to the <span class="oblique">SCANNER</span> section or directly click on the link below.
-                    <button type="submit" class="hero-btn red-btn">START</button></p>
+                    <button type="submit" class="hero-btn red-btn" onclick="location.href='scanner.html';">START</button></p>
                     <p>To learn more about the scanner, you can go to the <span class="oblique">LEARN MORE</span> section or click in the 
                     link below
-                    <button type="submit" class="hero-btn red-btn">LEARN</button></p>
+                    <button type="submit" class="hero-btn red-btn" onclick="location.href='learnMore.html';">LEARN</button></p>
                 </p>
             </div>
         </div>
