correction scan.js

--- a/Scanner des Vulnerabilites/webSite_version/scanner.html
+++ b/Scanner des Vulnerabilites/webSite_version/scanner.html
@@ -49,7 +49,7 @@
                     <div class="dropdown" id="dropdown">
                         <button type="button" id="dropdownButton" onclick="toggleDropdown()">Select scan types <span class="arrow">></span></button>
                         <div class="scan-type-selection">
-                            <label><input type="checkbox" name="select-" value="all" id="all"> Select All</label>
+                            <label><input type="checkbox" name="scan-type" value="all" id="all"> Select All</label>
                             <label><input type="checkbox" name="scan-type" value="whois"> WHOIS</label>
                             <label><input type="checkbox" name="scan-type" value="sqli"> SQLi</label>
                             <label><input type="checkbox" name="scan-type" value="xss"> XSS</label>
