--- a/Scanner des Vulnerabilites/webSite_version/scanner.html
+++ b/Scanner des Vulnerabilites/webSite_version/scanner.html
@@ -110,6 +110,6 @@
         </div>
         <p>Made with <i class="fa fa-heart-o"></i> by Daniela CERAKU & Salla DIOP</p>
     </section>
-    <script src="scan.js"></script>
+    <script src="script2.js"></script>
 </body>
 </html>
