derniers changement de la page web

--- a/Scanner des Vulnerabilites/webSite_version/download.html
+++ b/Scanner des Vulnerabilites/webSite_version/download.html
@@ -52,7 +52,7 @@
                     <div class="face face2">
                         <div class="content">
                             <p>Go to the github to learn how install and use the script </p>
-                            <a href="zip/script.zip" download="script.zip" type="button">DOWNLOAD HERE</a>
+                            <a href="https://github.com/DanielaCe18/ThreatXplore">DOWNLOAD HERE</a>
                         </div>
                     </div>
                 </div>
@@ -67,7 +67,7 @@
                     <div class="face face2">
                         <div class="content">
                             <p>Go to our GitHub to learn how to use the application version.</p>
-                            <a href="zip/app.zip" download="app.zip" type="button">DOWNLOAD HERE</a>
+                            <a href="https://github.com/DanielaCe18/ThreatXplore">DOWNLOAD HERE</a>
                         </div>
                     </div>
                 </div>
