--- a/Scanner des Vulnerabilites/webSite_version/home.html
+++ b/Scanner des Vulnerabilites/webSite_version/home.html
@@ -37,25 +37,25 @@
 
     <!--ABOUT US-->
     <section class="apropos" id="apropos">
-        <h1>APROPOS</h1>
+        <h1>ABOUT US</h1>
         <p>Welcome to our website <span class="oblique">ThreatXplore</span>. </p>
 
         <div class="row">
             <div class="apropos_items"> <!--course-col-->
                 <h3>Who Are We ?</h3>
-                <p>We are 3rd year student in Cybersecurity at ESGI (Ecole Supérieure de Génie Informatique) localised in Paris, 12rd arrondissment. This website has been created 
-                    as a annual final project.
+                <p>We are 3rd year students in Cybersecurity at ESGI (Ecole Supérieure de Génie Informatique) localised in Paris, 12rd arrondissment. This website has been created 
+                    as an annual project.
                 </p>
             </div>
             <div class="apropos_items">
                 <h3>Purpose of this website</h3>
-                <p>This website is vulnerability scanner for web application. It's search to give a free solution to 
-                    verify the vulnerability risk that a web application can be expose and give solution to secure it in case of risk. </p>
+                <p>This website is web vulnerability scanner. Its purpose is to offer an open source solution to 
+                    detect the vulnerabilities present in a website and give solutions to secure it in case of risk. </p>
             </div>
             <div class="apropos_items">
                 <h3>Get Started</h3>
                 <p>
-                    <p>To directly begin to scan your application, you can navigate to the <span class="oblique">SCANNER</span> section or directly click on the link below.
+                    <p>To directly begin to scan your website, you can navigate to the <span class="oblique">SCANNER</span> section or directly click on the link below.
                     <button type="submit" class="hero-btn red-btn" onclick="location.href='scanner.html';">START</button></p>
                     <p>To learn more about the scanner, you can go to the <span class="oblique">LEARN MORE</span> section or click in the 
                     link below
