ajout des liens linkedin

--- a/Scanner des Vulnerabilites/webSite_version/contactUs.html
+++ b/Scanner des Vulnerabilites/webSite_version/contactUs.html
@@ -44,16 +44,16 @@
                 <img src="images/2.png">
                 <div class="layer">
                     <h3>Daniela CERAKU</h3>
-                    <h4><a href="https://www.linkedin.com" target="_blank"><i class="fa fa-linkedin"></i>LinkedIn</a></h4>
-                    <h4><a href="https://www.github.com" target="_blank"><i class="fa fa-github"></i></i>GitHub</a></h4>
+                    <h4><a href="www.linkedin.com/in/daniela-c-81503126b" target="_blank"><i class="fa fa-linkedin"></i>LinkedIn</a></h4>
+                    <h4><a href="https://github.com/DanielaCe18" target="_blank"><i class="fa fa-github"></i></i>GitHub</a></h4>
                 </div>
             </div>
             <div class="aboutus_items">
                 <img src="images/1.png">
                 <div class="layer">
                     <h3>Salla DIOP</h3>
-                    <h4><a href="https://www.linkedin.com" target="_blank"><i class="fa fa-linkedin"></i>LinkedIn</a></h4>
-                    <h4><a href="https://www.github.com" target="_blank"><i class="fa fa-github"></i>GitHub</a></h4>
+                    <h4><a href="https://www.linkedin.com/in/salla-diop-85b109214/" target="_blank"><i class="fa fa-linkedin"></i>LinkedIn</a></h4>
+                    <h4><a href="https://github.com/sdiop61" target="_blank"><i class="fa fa-github"></i>GitHub</a></h4>
                 </div>
             </div>
         </div>
